[gd_scene load_steps=10 format=3 uid="uid://8fbebj62v1qw"]

[ext_resource type="Script" path="res://Characters/Player/Skills/Jump_skill/Scripts/Jump_skill.gd" id="1_lb43o"]
[ext_resource type="Texture2D" uid="uid://cwtcrp0fqnkov" path="res://Characters/Player/Skills/Jump_skill/Sprites/Explosion_gas_circle1.png" id="2_boe0r"]
[ext_resource type="Texture2D" uid="uid://byxb42212h34h" path="res://Characters/Enemies/BasicEnemy/Sprite/vfx_effect_consume.png" id="2_s3r1h"]
[ext_resource type="Texture2D" uid="uid://co6topu0k7gb2" path="res://Characters/Player/Skills/Jump_skill/Sprites/Explosion_gas_circle2.png" id="3_ju20p"]
[ext_resource type="PackedScene" uid="uid://c0m140xrm248g" path="res://Tools/FXController/Scenes/FXController.tscn" id="4_23yg7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bpg7y"]
atlas = ExtResource("2_s3r1h")
region = Rect2(120, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4mth"]
atlas = ExtResource("2_boe0r")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_waxvo"]
atlas = ExtResource("3_ju20p")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_md817"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpg7y")
}],
"loop": false,
"name": &"Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4mth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_waxvo")
}],
"loop": false,
"name": &"On",
"speed": 5.0
}]

[node name="JumpSkill" type="Area2D"]
script = ExtResource("1_lb43o")
jump = 600

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_md817")
animation = &"On"
autoplay = "Off"
frame = 1
frame_progress = 1.0

[node name="Audio" type="Node" parent="."]

[node name="Jump_soundFx" type="AudioStreamPlayer2D" parent="Audio"]

[node name="DobleJump_soundFx" type="AudioStreamPlayer2D" parent="Audio"]

[node name="FxController" parent="." instance=ExtResource("4_23yg7")]

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
